# cpp_rtype

./: .gitignore  README.md  RFC RType.txt
Client/: .gitignore  ArgumentLoader  CMakeLists.txt  Exceptions  Logger  imgui.ini  main.cpp  symlinks.bat  symlinks.sh
Client/DataGetter/: DataGetter.cpp  DataGetter.hh  Room.cpp  Room.hh
Client/GameHandler/: GameHandler.cpp  GameHandler.hh
Client/GameHandler/Entities/: ADrawableEntity.cpp  ADrawableEntity.hh  AEntity.cpp  AEntity.hh  Player.cpp  Player.hh
Client/Graphics/: AViewController.cpp  AViewController.hh  GameViewController.cpp  GameViewController.hh  IView.hpp  LoginViewController.cpp  LoginViewController.hh  MainView.cpp  MainView.hpp  RoomListViewController.cpp  RoomListViewController.hh  RootViewController.cpp  RootViewController.hh  Star.cpp  Star.hpp  StarField.cpp  StarField.hpp  ViewController.cpp  ViewController.hpp  WaitingRoomViewController.cpp  WaitingRoomViewController.hh  main.cpp
Client/NetworkAbstract/: BoostSocket.h  BoostSocketManager.hh  ISocketManager.hh
Client/NetworkAbstract/Message/: Message.cpp
ClientNetwork/: .gitignore  .gitignore~  CMakeLists.txt
Common/ArgumentLoader/: ArgumentLoader.cpp  ArgumentLoader.hh  Configure.cpp
Common/Exceptions/: Exception.cpp  Exception.hh
Common/Logger/: Logger.hpp  LoggerHelper.hh
Common/NetworkAbstract/: BoostAcceptor.cpp  BoostAcceptor.hh  BoostSocket.cpp  BoostSocket.h  BoostSocketManager.cpp  BoostSocketUdp.cpp  BoostUdpClient.hpp  BoostUdpInputManager.hpp  BoostUdpServer.hpp  BoostUdpSocket.cpp  BoostUdpSocket.hh  IAcceptor.cpp  IAcceptor.hh  IServer.hh  ISocket.cpp  ISocket.h  IUdpInputManager.hh  LinuxSocket.hh  SocketReceiver.cpp
Common/NetworkAbstract/Message/: Message.cpp  Message.h
ServerAuth/: .gitignore  ArgumentLoaderWin  CMakeLists.txt  LoggerWin  Makefile  NetworkAbstract  NetworkAbstractWin  ServerAuth  main.cpp  symlinks.bat  symlinks.sh
ServerAuth/ArgumentLoader/: ArgumentLoader.cpp  ArgumentLoader.hh  Configure.cpp
ServerAuth/BaseServer/: BaseServer.cpp  BaseServer.hh
ServerAuth/ClientRegister/: ClientRegister.cpp  ClientRegister.hh  RegisteredClient.cpp  RegisteredClient.hh  Room.cpp  Room.hh
ServerAuth/Logger/: Logger.hpp  LoggerHelper.cpp  LoggerHelper.hh
ServerAuth/NetworkAbstract/: BoostAcceptor.cpp  BoostAcceptor.hh  BoostSocket.cpp  BoostSocket.h  BoostUdpSocket.cpp  IAcceptor.hh  ISocket.cpp  ISocket.h  LinuxAcceptor.cpp  LinuxAcceptor.hh  LinuxSocket.cpp  SocketReceiver.cpp  SocketReceiver.hh
ServerAuth/NetworkAbstract/Message/: Message.cpp  Message.h
ServerAuth/NetworkAbstractWin/: BoostAcceptor.cpp
ServerAuth/RTypeManager/: RTypeManager.cpp  RTypeManager.hh
ServerAuth/ServerRegister/: IServerRegister.hh  RegisteredServer.cpp  RegisteredServer.hh  ServerRegister.cpp  ServerRegister.hh
ServerGame/: .gitignore  CMakeLists.txt  ExceptionsWin  main.cpp
ServerGame/ArgumentLoader/: Configure.hh
ServerGame/GameServer/: APlayer.cpp  APlayer.hh  GameServer.cpp  GameServer.hh  MonsterInstanciater.cpp  MonsterInstanciater.hh
ServerGame/GameServer/DLLManager/: ADLLManager.cpp  ADLLManager.hh  LinuxDLLManager.cpp  LinuxDLLManager.hh  WindowsDLLManager.cpp  WindowsDLLManager.hh
ServerGame/GameServer/Entities/: AEnemy.cpp  AEnemy.hh  AEntity.cpp  AEntity.hh  AEntityShooter.cpp  AEntityShooter.hh  ALivingEntity.cpp  ALivingEntity.hh  APlayer.cpp  APlayer.hh  CollideRect.hh
ServerGame/GameServer/Entities/Bullet/: ABullet.cpp  ABullet.hh  AllyBullet.cpp  AllyBullet.hh
ServerGame/GameServer/Entity/: AEntity.cpp  AEntity.hh  APlayer.cpp  APlayer.hh  CollideRect.cpp
ServerGame/Monster/BasicMonster/: BasicMonster.cpp  BasicMonster.hh  CMakeLists.txt  Entities  mandatory.cpp  symlinks.sh
ServerGame/Monster/BasicMonster/Entities/: AEnemy.hh  AEntityShooter.hh  ALivingEntity.cpp  ALivingEntity.hh  APlayer.cpp  APlayer.hh  SpawnableEntity.cpp  SpawnableEntity.hh  Vector2.hh
ServerGame/Monster/BasicMonster/Entities/Bullet/: AllyBullet.cpp  AllyBullet.hh
ServerGame/Monster/BossMonster/: BasicMonster.hh  BossMonster.cpp  BossMonster.hh  CMakeLists.txt  mandatory.cpp  symlinks.bat  symlinks.sh
ServerGame/NetworkAbstract/: BoostUdpClient.hpp  BoostUdpInputManager.hpp
ServerGame/NetworkAbstractWin/: BoostSocket.cpp  BoostSocketUdp.hh  ISocket.cpp
